# GhostRunner

./: CR.txt  ghostrunner_summary.txt
Common/: CMakeLists.txt
Common/include/: Logger.hh  PrettyPrinter.hh  Vector2.hh
Common/include/Logger/: LogHandler.hh  Logger.hh  LoggerCallbacks.hh  LoggerOptions.hh
Common/src/: Vector2.cpp
Common/src/Logger/: LogHandler.cpp  Logger.cpp  LoggerCallbacks.cpp  LoggerOptions.cpp
InputEngine/: CMakeLists.txt
InputEngine/include/: Gamepad.hh  InputDevice.hh  InputEngine.hh  KeyBoard.hh  Utils.hh
InputEngine/src/: Gamepad.cpp  InputEngine.cpp  KeyBoard.cpp  Utils.cpp
InstallerSample/: InstallScript.iss  readme.txt
InstallerSample/GAMEDIRECTORY/Resources/: Template_image.fd
InstallerSample/GAMEDIRECTORY/Resources/Descriptors/: 03 - Ground.fd  06 - Spike.fd  09 - Player Name.fd  16 - Hero_Idle.fd  19 - Eye.fd  21 - Ghost_Monster.fd  22 - Dark.fd  23 - Bomb.fd
InstallerSample/GAMEDIRECTORY/Resources/Level_Patterns/: 01-Start.pd  02-End.pd  12-EndReversePyramid.pd  13-UpperPlatform.pd
PhysicEngine/: CMakeLists.txt
PhysicEngine/include/: AEnvironmentalEffect.hh  BoxCollider.hh  Layer.hh  RigidBody.hh
PhysicEngine/src/: AEnvironmentalEffect.cpp  BoxCollider.cpp  Layer.cpp  RigidBody.cpp
Resources/Descriptors/: 10 - BackGUI.fd  14 - End Flag.fd  17 - Hero_Dash.fd  28 - HowTo.fd
Resources/Level_Patterns/: 04-Platform.pd  07-Obstacle.pd  09-StartPyramid.pd
SFML/lib/: sfml-audio-s-d.lib  sfml-audio-s.lib  sfml-graphics-s.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s.lib  sfml-system-s-d.lib  sfml-system-s.lib  sfml-window-s-d.lib  sfml-window-s.lib
SoundEngine/: CMakeLists.txt  Cmake.bat
SoundEngine/dependencies/lib/: fmodL64_vc.lib
SoundEngine/include/: AudioExeption.hh  IdAlreadyTakeExeption.hh  NotFoundExeption.hh  SoundEngine.hh
SoundEngine/src/: AudioExeption.cpp  IdAlreadyTakeExeption.cpp  Main.cpp  NotFoundExeption.cpp  SoundEngine.cpp
include/: AdditionalDrawableAnimation.hh  AdditionalDrawableBar.hh  AdditionalDrawableHitboxOutline.hh  AdditionalDrawableText.hh  Animation.hh  Animator.hh  AssetManager.hh  BasicTrap.hh  BasicWall.hh  Block.hh  Camera.hh  Dash.hh  Dodge.hh  EndBlock.hh  FPSCounter.hh  GameGUI.hh  GameObject.hh  GhostController.hh  GlobalInfos.hh  Gravity.hh  HeroController.hh  IAction.hh  IAdditionalDrawableInfo.hh  Inflate.hh  MapGenerator.hh  MenuController.hh  PatternTemplate.hh  Player.hh  RaceProgress.hh  Scene.hh  VectorTranslate.hh
include/InputBox/: IControllerTranslator.hh  IKeyboardTranslator.hh  InputBox.hh  SFMLCustomStuff.hh
include/Screens/: ConfirmationScreen.hh  Credits.hh  GameScreen.hh  HowToPlay.hh  IScreen.hh  LoadingScreen.hh  MainMenuScreen.hh  MenuScreen.hh
include/Tools/: Ini.hh  PauseOverlay.hh  TextInBox.hh  WINFS.hh  WINFSReader.hh  WinOverlay.hh
src/: AdditionalDrawableBar.cpp  AdditionalDrawableHitboxOutline.cpp  AdditionalDrawableText.cpp  Animation.cpp  Animator.cpp  AssetManager.cpp  BasicTrap.cpp  BasicWall.cpp  Block.cpp  Camera.cpp  ClassTest.cpp  Dash.cpp  Dodge.cpp  EndBlock.cpp  FPSCounter.cpp  GameGUI.cpp  GameObject.cpp  GhostController.cpp  Gravity.cpp  HeroController.cpp  IAdditionalDrawableInfo.cpp  Inflate.cpp  MapGenerator.cpp  MenuController.cpp  PatternTemplate.cpp  Player.cpp  RaceProgress.cpp  Scene.cpp  Source.cpp  Test2.cpp  main.cpp
src/InputBox/: InputBox.cpp  SFMLCustomStuff.cpp
src/Screens/: ConfirmationScreen.cpp  Credits.cpp  GameScreen.cpp  HowToPlay.cpp  LoadingScreen.cpp  MainMenuScreen.cpp  MenuScreen.cpp
src/Tools/: Ini.cpp  PauseOverlay.cpp  TextInBox.cpp  WINFS.cpp  WINFSReader.cpp  WinOverlay.cpp
